--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 					<br>
 					<br>
-					Further below are valuable resouces to learn more about the implicit bias and access to Project Implicit.
+					Further below are valuable resources to learn more about the implicit bias and access to Project Implicit.
 					Through Project Implicit, you are able to take exams that reveal implicit biases by assessing the speed and
 					accuracy of participants' responses to stimuli associated with various concepts such as race, gender and others. The goal
 					is to bring awareness to unconscious biases, fostering self reflection and encouraging conversations about the
